custom-manifests/core/dnsmasq.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dnsmasq
spec:
  selector:
    matchLabels:
      app: dnsmasq
  template:
    metadata:
      labels:
        app: dnsmasq
    spec:
      hostNetwork: true
      containers:
        - name: dnsmasq
          image: dockurr/dnsmasq
          ports:
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/dnsmasq.conf
              subPath: dnsmasq.conf
      volumes:
        - name: config
          configMap:
            name: dnsmasq-config
