custom-manifests/core/whoami.yaml
# custom-manifests/core/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: whoami-deployment
spec:
replicas: 2
selector:
    matchLabels:
    app: whoami
template:
    metadata:
    labels:
        app: whoami
    spec:
    containers:
    - name: whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
